Make WalkContentStyleRules work correctly for XHTML tables without row groups.  b=68061  r+sr=bzbarsky